--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,14 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.9.10",
     "@nestjs/platform-express": "^7.5.1",
+    "@prisma/client": "^2.17.0",
+    "apollo-server-express": "^2.21.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -43,6 +50,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "prisma": "2.17.0",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
