--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -32,3 +32,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+prisma/*.db
+coverage/
+
+prisma/migrations/dev/
+.env
