--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,6 @@
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
-POSTGRES_DATABASE=pokemon
+POSTGRES_USER="root"
+POSTGRES_PASSWORD="root"
+POSTGRES_DATABASE="pokemon"
 PORT=8080
-PGADMIN_DEFAULT_EMAIL=admin@example.com
-PGADMIN_DEFAULT_PASSWORD=admin
-PGADMIN_LISTEN_PORT=8081
