--- a/server/package.json
+++ b/server/package.json
@@ -28,12 +28,14 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.21.0",
+    "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
